--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ellie & Brandon's Wedding</title>
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <title>희진 & 동률의 결혼식</title>
   </head>
   <body>
     <div id="root"></div>
