feat: 메타 데이터 추가

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="./images/favicon.png" />
     <title>희진 & 동률의 결혼식</title>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="희진 & 동률의 결혼식에 초대합니다 💍" />
+    <meta property="og:description" content="2025년 11월 2일, 소중한 분들을 초대합니다." />
+    <meta property="og:image" content="https://elliedrkwedding.site/images/Our%20Wedding.jpg" />
+    <meta property="og:url" content="https://elliedrkwedding.site/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="희진 & 동률의 결혼식 초대장" />
+    <meta name="twitter:description" content="2025년 11월 2일, 함께해 주세요." />
+    <meta name="twitter:image" content="https://elliedrkwedding.site/images/Our%20Wedding.jpg" />
   </head>
   <body>
     <div id="root"></div>
