--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <title>희진 & 동률의 결혼식</title>
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="희진 & 동률의 결혼식에 초대합니다 💍" />
