--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
     <meta name="twitter:image" content="https://elliedrkwedding.site/images/Our%20Wedding.jpg" />
     <!-- GitHub Pages SPA support -->
     <script>
-      (function(){
-        var redirect = sessionStorage.redirect;
-        delete sessionStorage.redirect;
-        if (redirect && redirect != location.href) {
-          history.replaceState(null, null, redirect);
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) {
+            return s.replace(/~and~/g, '&')
+          }).join('?')
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          )
         }
-      })();
+      }(window.location))
     </script>
   </head>
   <body>
