fix: 정적으로 /v2 메타데이터 추가

--- a/public/v2/index.html
+++ b/public/v2/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="favicon.png?" />
+    <link rel="icon" type="image/png" href="../../favicon.png?" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <title>희진 & 동률의 결혼식</title>
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="희진 & 동률의 결혼식에 초대합니다 💍" />
     <meta property="og:description" content="2025년 11월 2일, 소중한 분들을 초대합니다." />
     <meta property="og:image" content="https://elliedrkwedding.site/images/Our%20Wedding.jpg" />
-    <meta property="og:url" content="https://elliedrkwedding.site" />
+    <meta property="og:url" content="https://elliedrkwedding.site/v2" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags -->
@@ -44,6 +44,6 @@
         }
       })();
     </script>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="../../src/main.tsx"></script>
   </body>
 </html>
