--- a/public/v2/index.html
+++ b/public/v2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/favicon.png?" />
+    <link rel="icon" type="image/png" href="../../favicon.png?" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <title>희진 & 동률의 결혼식</title>
     <!-- Open Graph Meta Tags -->
@@ -44,6 +44,6 @@
         }
       })();
     </script>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="../../src/main.tsx"></script>
   </body>
 </html>
